docs/examples/invalid/semanticErr/extension/bitwise/bitwiseType2.wacc
begin
  int x = 1 | 'c';
  println x
end
